<resources>
    <string name="app_name">Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="btn_spStr">Spotify Streamer</string>
    <string name="btn_Scores">Scores Apps</string>
    <string name="btn_Library">Library App</string>
    <string name="btn_bldItBu">Build It Bigger</string>
    <string name="btn_xyz">XYZ Reader</string>
    <string name="btn_Capstone">Capstone: MY OWN APP</string>
    <string name="btn_message">This Button will launch: </string>
</resources>
