<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main_portfolio" tools:context=".MainPortfolioActivity"
    android:weightSum="1">

    <TextView android:text="My Nanodegree Apps" android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:layout_weight="0.09"
        android:gravity="center" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_spStr"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:onClick="showMessage"
        android:layout_weight="0.11"
        android:background="#F08C35" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_Scores"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:onClick="showMessage"
        android:layout_weight="0.12"
        android:background="#F08C35"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_Library"
        android:id="@+id/button3"
        android:onClick="showMessage"
        android:layout_weight="0.11"
        android:background="#F08C35"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_bldItBu"
        android:id="@+id/button4"
        android:onClick="showMessage"
        android:layout_weight="0.11"
        android:background="#F08C35"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_xyz"
        android:id="@+id/button5"
        android:onClick="showMessage"
        android:layout_below="@+id/button4"
        android:layout_weight="0.11"
        android:background="#F08C35"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_Capstone"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:onClick="showMessage"
        android:layout_weight="0.10"
        
        android:theme="@style/btnStyle"/>

</LinearLayout>
